Update header date and image source in index.html

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
     <div class="shell">
       <header class="header">
         <div class="header-title">Happy Valentine’s Day</div>
-        <div class="header-date">2026 – irgendwo zwischen dir und mir</div>
+        <div class="header-date">2026</div>
       </header>
 
       <section class="grid">
@@ -504,7 +504,7 @@
           <h2>Blumenstrauß, der frisch bleibt</h2>
           <div class="photo-frame">
             <!-- Dein Bouquet-Bild hier einfügen -->
-            <img src="bouquet.jpg" alt="Ein digitaler Blumenstrauß" />
+            <img src="flowers.png" alt="Ein digitaler Blumenstrauß" />
           </div>
           <div class="photo-caption">
             Kein Wasser nötig, hält für immer – aber echte Blumen gibt’s trotzdem.
