Enhance photo frame styles and update text content
Added a new photo frame style and updated text for clarity.

--- a/index.html
+++ b/index.html
@@ -242,6 +242,14 @@
       aspect-ratio: 16 / 9;
     }
 
+    .photo-frame-high {
+      width: 100%;
+      border-radius: 18px;
+      overflow: hidden;
+      background: rgba(0, 0, 0, 0.08);
+      aspect-ratio: 9 / 16;
+    }
+
     .photo-frame img {
       width: 100%;
       height: 100%;
@@ -483,8 +491,9 @@
               Auch mit Abstand bist du <em>mein</em> Lieblingsmensch.
             </div>
             <p class="tile-hero-sub">
-              Zwei Monate Long-Distance sind keine Ewigkeit, aber lang genug,
-              um zu merken, wie sehr du im Alltag fehlst.
+              Zwei Monate Long-Distance sind keine Ewigkeit. Aber lang genug,
+              um zu merken, wie sehr einem ein Mensch fehlen kann. Aber auch lang genug,
+              um viele Erinnerungen zu schaffen.
             </p>
           </div>
           <div class="tile-hero-foot">
@@ -513,7 +522,7 @@
         <!-- Seitenfoto -->
         <article class="tile tile-photo-side">
           <h2>Wir zwei, nach deinem Examen</h2>
-          <div class="photo-frame">
+          <div class="photo-frame-high">
             <img src="examen.jpg" alt="Unser letztes Treffen" />
           </div>
           <div class="photo-caption">
@@ -543,6 +552,10 @@
             <li class="todo-item">
               <div class="todo-checkbox"><span></span></div>
               <span>Wandern oder Laufen gehen</span>
+            </li>
+            <li class="todo-item">
+              <div class="todo-checkbox"><span></span></div>
+              <span>Passauer Frühling genießen</span>
             </li>
             <li class="todo-item">
               <div class="todo-checkbox"><span></span></div>
