--- a/index.html
+++ b/index.html
@@ -257,6 +257,13 @@
       display: block;
     }
 
+    .photo-frame-high img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
     .photo-caption {
       margin-top: 9px;
       font-size: 0.88rem;
