Revise Valentine's Day message and images
Updated text content and image references in the Valentine's Day message.

--- a/index.html
+++ b/index.html
@@ -487,7 +487,6 @@
     <div class="shell">
       <header class="header">
         <div class="header-title">Happy Valentine’s Day, Anna</div>
-        <div class="header-date">2026</div>
       </header>
 
       <section class="grid">
@@ -499,8 +498,9 @@
             </div>
             <p class="tile-hero-sub">
               Zwei Monate Long-Distance sind keine Ewigkeit. Aber lang genug,
-              um zu merken, wie sehr einem ein Mensch fehlen kann. Aber auch lang genug,
-              um viele Erinnerungen zu schaffen.
+              um zu merken, wie sehr einem ein Mensch fehlen kann.
+              
+              Und gleichzeitg ist es eine Menge Zeit, um tolle neue Erinnerungen zu schaffen.
             </p>
           </div>
           <div class="tile-hero-foot">
@@ -539,12 +539,12 @@
 
         <!-- Extra-Foto -->
         <article class="tile tile-photo-extra">
-          <h2>Future Us</h2>
-          <div class="photo-frame">
-            <img src="photo-future.jpg" alt="Ein Ort für uns" />
+          <h2>Lieblingsbild</h2>
+          <div class="photo-frame-high">
+            <img src="us.png" alt="wir" />
           </div>
           <div class="photo-caption">
-            Ein Ort, an dem wir zusammen stehen werden, wenn der Countdown auf 0 ist.
+            Eines meiner Lieblingsbilder von uns.
           </div>
         </article>
 
