--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
           </div>
 
           <div class="letter-subline">
-            Ein Umschlag für alles, was sich nicht in einer Whatsapp Nachricht schicken lässt.
+            Ein Brief für alles, was sich nicht in einer Whatsapp Nachricht sagen lässt.
           </div>
         </article>
       </section>
@@ -602,29 +602,40 @@
         <button class="letter-page-close" type="button" data-close-letter>&times;</button>
       </div>
       <div class="letter-page-body">
-        <p>Hi du,</p>
+        <p>Hi Anna,</p>
         <p>
-          gerade sind wir nicht am selben Ort, aber du bist trotzdem
-          ständig in meinem Kopf. In Nachrichten, in Anrufen, in kleinen Momenten,
-          in denen ich denke: „Das würde ich dir jetzt gern direkt erzählen.“
+          schön dass du es bis zum Brief geschafft hast, war mir nicht sicher
+          ob man die Seite gute bedienen kann, haha. Wir sind noch nicht mal ein paar Tage
+          nicht mehr beieinander, aber du bist trotzdem schon ständig in meinem Kopf.
+          Vorallem die Momente in denen ich mir denke, "das würde ich dir heute Abend wenn
+          wir uns sehen direkt erzählen", tun schon etwas weh. Ich werde dir aber einfach
+          so viele davon wie möglich trotzdem erzählen, und ich hoffe du weißt wie sehr mich
+          jedes kleinste Detail deines Aufenthalts interessieren wird.
         </p>
         <p>
-          Die Distanz macht manches komplizierter, aber sie ändert nichts daran,
-          wie wichtig du mir bist. Eher im Gegenteil: jeder Tag zeigt ein bisschen
-          mehr, wie sehr ich mich auf das freue, was wieder normal wird, wenn wir
-          am gleichen Ort sind.
+          Das ist gerade das erste Mal, dass ich zum Valentinstag einen Brief schreibe. Und jetzt
+          auch noch am Computer, wie eine E-Mail. Etwas ungewohnt, aber wenigstens musst du so nicht
+          meine Sauklaue entziffern. Als ich noch in der Schule war gab es Aktionen am Valentinstag,
+          an denen man seiner Freundin oder seinem Freund einen Brief zukommen lassen konnte. Damals
+          hab ich mir überlegt wie und wem ich mal sowas schreiben werde. Am "wie" kann man sicher noch arbeiten,
+          aber das "wem" ist das Beste was mir je passiert ist. Nämlich du.
         </p>
         <p>
-          Ich will wieder, dass „zusammen“ nicht bedeutet „gleicher Anruf“, sondern
-          „gleicher Raum“. Frühstück, das sich zieht. Abende, die länger werden,
-          als geplant. Und dieses Gefühl, dass man nichts Besonderes tun muss, damit
-          es sich besonders anfühlt.
+          Wie wir uns nach der Feier in den Armen gelegen sind, hat mir das wieder gezeigt. wie du mir einen wunderschönen
+          Geburtstag beschert hast. Jedes Lachen was du mir auf die Lippen zauberst. Jedes gute Gespräch das wir haben. Jedes leckere Essen was wir teilen.
+          Du bestätigst meine Meinung jeden Tag aufs Neue, und das wird mich für immer glücklich machen.
+          Ich bin dir dafür sehr dankbar. Du bist mein Sonnenschein, mein Ruhepol, mein aufmerksames Ohr und selbst wenn wir uns nicht sehen werden, hoffe ich das wir 
+          während des ganzen trotzdem für einander da sind. Ich freue mich schon auf unsere Facetime Calls, auf Audios und 
+          kleine Nachrichten und Snaps. Ich freue mich darauf zu sehen, dass wir schöne Dinge erleben. Und ich freue mich mehr als alles andere
+          darauf, dich wieder zu sehen.
         </p>
         <p>
-          Bis der Countdown bei null ist, machen wir eben das Beste aus zwei Orten.
-          Aber in meinem Kopf gibt es nur einen: da, wo du bist.
+          Und bis der Countdown oben bei null ist, machen wir eben das Beste aus zwei Orten.
+          Aber in meinem Kopf gibt es langfristig nur einen perfekten Ort: da, wo du bist.
+
+          Ich liebe dich Anna, für immer.
         </p>
-        <p class="letter-page-sign">&mdash; ich</p>
+        <p class="letter-page-sign">&mdash; Moritz</p>
       </div>
     </div>
   </div>
