--- a/index.html
+++ b/index.html
@@ -621,18 +621,22 @@
           aber das "wem" ist das Beste was mir je passiert ist. Nämlich du.
         </p>
         <p>
-          Wie wir uns nach der Feier in den Armen gelegen sind, hat mir das wieder gezeigt. wie du mir einen wunderschönen
+          Wie wir uns nach der Feier in den Armen gelegen sind, hat mir das wieder gezeigt. Wie du mir einen wunderschönen
           Geburtstag beschert hast. Jedes Lachen was du mir auf die Lippen zauberst. Jedes gute Gespräch das wir haben. Jedes leckere Essen was wir teilen.
-          Du bestätigst meine Meinung jeden Tag aufs Neue, und das wird mich für immer glücklich machen.
-          Ich bin dir dafür sehr dankbar. Du bist mein Sonnenschein, mein Ruhepol, mein aufmerksames Ohr und selbst wenn wir uns nicht sehen werden, hoffe ich das wir 
-          während des ganzen trotzdem für einander da sind. Ich freue mich schon auf unsere Facetime Calls, auf Audios und 
+          Du bestätigst meine Meinung jeden Tag aufs Neue, und das wird mich für immer glücklich machen. Du kannst dir nicht vorstellen wie dankbar ich dafür bin. 
+          Ich liebe alles an dir. Deine Augen, dein Lachen, dein Auftreten, deinen Humor, jedes kleine Detail deines Charakters.
+        </p>
+        <p>
+          Du bist mein Sonnenschein, mein Ruhepol, mein aufmerksames Ohr und selbst wenn wir uns nicht sehen werden, hoffe ich dass wir 
+          während des Ganzen trotzdem für einander da sein können. Ich freue mich schon auf unsere Facetime Calls, auf Audios und 
           kleine Nachrichten und Snaps. Ich freue mich darauf zu sehen, dass wir schöne Dinge erleben. Und ich freue mich mehr als alles andere
           darauf, dich wieder zu sehen.
         </p>
         <p>
           Und bis der Countdown oben bei null ist, machen wir eben das Beste aus zwei Orten.
           Aber in meinem Kopf gibt es langfristig nur einen perfekten Ort: da, wo du bist.
-
+        </p>
+        <p>
           Ich liebe dich Anna, für immer.
         </p>
         <p class="letter-page-sign">&mdash; Moritz</p>
