Update todo item and letter title in index.html

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
             </li>
             <li class="todo-item">
               <div class="todo-checkbox"><span></span></div>
-              <span>Wandern oder Laufen gehen</span>
+              <span>(Kaiserschmarrn)Wandern oder Laufen gehen</span>
             </li>
             <li class="todo-item">
               <div class="todo-checkbox"><span></span></div>
@@ -598,7 +598,7 @@
   <div class="letter-overlay" id="letterOverlay">
     <div class="letter-page" role="dialog" aria-modal="true" aria-labelledby="letterTitlePopup">
       <div class="letter-page-header">
-        <div class="letter-page-title" id="letterTitlePopup">Ein Brief nur für dich</div>
+        <div class="letter-page-title" id="letterTitlePopup">Brief</div>
         <button class="letter-page-close" type="button" data-close-letter>&times;</button>
       </div>
       <div class="letter-page-body">
