Remove paragraph and footer from hero section
Removed a paragraph and a footer from the hero section.

--- a/index.html
+++ b/index.html
@@ -499,12 +499,10 @@
             <p class="tile-hero-sub">
               Zwei Monate Long-Distance sind keine Ewigkeit. Aber lang genug,
               um zu merken, wie sehr einem ein Mensch fehlen kann.
-              
+            </p>
+            <p class="tile-hero-sub">
               Und gleichzeitg ist es eine Menge Zeit, um tolle neue Erinnerungen zu schaffen.
             </p>
-          </div>
-          <div class="tile-hero-foot">
-            Ich · liebe · dich
           </div>
         </article>
 
