--- a/index.html
+++ b/index.html
@@ -545,14 +545,29 @@
             Eines meiner Lieblingsbilder von uns.
           </div>
         </article>
-
+        
+        <!-- Extra-Foto -->
+        <article class="tile tile-photo-extra">
+          <h2>Playlist</h2>
+          <div class="photo-frame-high">
+            <img src="playlist.png" alt="playlist" href="https://open.spotify.com/playlist/2WbAxP2DIfQna06eobEzkA?si=2fd41b55a796491f"/>
+          </div>
+          <div class="photo-caption">
+            Unsere Playlist - Wenn du Songs hast die du gerne hörst während du in Südafrika bist, tu sie gerne da rein :)
+          </div>
+        </article>
+        
         <!-- TODO-Liste -->
         <article class="tile tile-todo">
           <h2>Wenn wir uns wiedersehen</h2>
           <ul class="todo-list" id="todoList">
             <li class="todo-item">
               <div class="todo-checkbox"><span></span></div>
-              <span>Zu Ikea fahren</span>
+              <span>Zu Ikea gehen</span>
+            </li>
+            <li class="todo-item">
+              <div class="todo-checkbox"><span></span></div>
+              <span>Deine Oma besuchen</span>
             </li>
             <li class="todo-item">
               <div class="todo-checkbox"><span></span></div>
@@ -603,8 +618,8 @@
         <p>Hi Anna,</p>
         <p>
           schön dass du es bis zum Brief geschafft hast, war mir nicht sicher
-          ob man die Seite gute bedienen kann, haha. Wir sind noch nicht mal ein paar Tage
-          nicht mehr beieinander, aber du bist trotzdem schon ständig in meinem Kopf.
+          ob man die Seite gut bedienen kann, haha. Wir sind noch nicht mal ein paar Tage
+          nicht mehr beieinander, aber du bist trotzdem ständig in meinem Kopf.
           Vorallem die Momente in denen ich mir denke, "das würde ich dir heute Abend wenn
           wir uns sehen direkt erzählen", tun schon etwas weh. Ich werde dir aber einfach
           so viele davon wie möglich trotzdem erzählen, und ich hoffe du weißt wie sehr mich
@@ -621,12 +636,13 @@
         <p>
           Wie wir uns nach der Feier in den Armen gelegen sind, hat mir das wieder gezeigt. Wie du mir einen wunderschönen
           Geburtstag beschert hast. Jedes Lachen was du mir auf die Lippen zauberst. Jedes gute Gespräch das wir haben. Jedes leckere Essen was wir teilen.
-          Du bestätigst meine Meinung jeden Tag aufs Neue, und das wird mich für immer glücklich machen. Du kannst dir nicht vorstellen wie dankbar ich dafür bin. 
+          Du bestätigst meine Meinung jeden Tag aufs Neue, und das wird mich für immer glücklich machen. Du hast mir gezeigt wie es sich anfühlt, einen Seelenverwandten zu haben.
+          Du kannst dir nicht vorstellen wie dankbar ich dafür bin. 
           Ich liebe alles an dir. Deine Augen, dein Lachen, dein Auftreten, deinen Humor, jedes kleine Detail deines Charakters.
         </p>
         <p>
           Du bist mein Sonnenschein, mein Ruhepol, mein aufmerksames Ohr und selbst wenn wir uns nicht sehen werden, hoffe ich dass wir 
-          während des Ganzen trotzdem für einander da sein können. Ich freue mich schon auf unsere Facetime Calls, auf Audios und 
+          während des Ganzen trotzdem gut für einander da sein können. Ich freue mich schon auf unsere Facetime Calls, auf Audios und 
           kleine Nachrichten und Snaps. Ich freue mich darauf zu sehen, dass wir schöne Dinge erleben. Und ich freue mich mehr als alles andere
           darauf, dich wieder zu sehen.
         </p>
