--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
         <article class="tile tile-photo-side">
           <h2>Wir zwei, nach deinem Examen</h2>
           <div class="photo-frame-high">
-            <img src="examen.jpg" alt="Unser letztes Treffen" />
+            <img src="examen.jpg" alt="Examen" />
           </div>
           <div class="photo-caption">
             Hier noch mit echten Blumen.
@@ -549,7 +549,7 @@
         <!-- Extra-Foto -->
         <article class="tile tile-photo-extra">
           <h2>Playlist</h2>
-          <div class="photo-frame-high">
+          <div class="photo-frame">
             <img src="playlist.png" alt="playlist" href="https://open.spotify.com/playlist/2WbAxP2DIfQna06eobEzkA?si=2fd41b55a796491f"/>
           </div>
           <div class="photo-caption">
