Add link to Spotify playlist in photo frame
Updated the photo frame to include a link to the Spotify playlist.

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
         <!-- Extra-Foto -->
         <article class="tile tile-photo-extra">
           <h2>Playlist</h2>
-          <div class="photo-frame">
+          <div class="photo-frame" href="https://open.spotify.com/playlist/2WbAxP2DIfQna06eobEzkA?si=2fd41b55a796491f">
             <img src="playlist.png" alt="playlist" href="https://open.spotify.com/playlist/2WbAxP2DIfQna06eobEzkA?si=2fd41b55a796491f"/>
           </div>
           <div class="photo-caption">
