--- a/index.html
+++ b/index.html
@@ -556,6 +556,17 @@
             Unsere Playlist - Wenn du Songs hast die du gerne hörst während du in Südafrika bist, tu sie gerne da rein :)
           </div>
         </article>
+
+        <!-- Extra-Foto -->
+        <article class="tile tile-photo-extra">
+          <h2>Playlist</h2>
+          <div class="photo-frame" href="https://open.spotify.com/playlist/2WbAxP2DIfQna06eobEzkA?si=2fd41b55a796491f">
+            <img src="playlist.png" alt="playlist" href="https://open.spotify.com/playlist/2WbAxP2DIfQna06eobEzkA?si=2fd41b55a796491f"/>
+          </div>
+          <div class="photo-caption">
+            Unsere Playlist - Wenn du Songs hast die du gerne hörst während du in Südafrika bist, tu sie gerne da rein :)
+          </div>
+        </article>
         
         <!-- TODO-Liste -->
         <article class="tile tile-todo">
