--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         <article class="tile tile-photo-extra">
           <h2>Playlist</h2>
           <div class="photo-frame">
-            <a href="https://open.spotify.com/playlist/2WbAxP2DIfQna06eobEzkA?si=2fd41b55a796491f">
+            <a target="_blank" rel="noopener noreferrer" href="https://open.spotify.com/playlist/2WbAxP2DIfQna06eobEzkA?si=2fd41b55a796491f">
               <img src="playlist.png" alt="playlist"/>              
             </a>
           </div>
