--- a/index.html
+++ b/index.html
@@ -537,9 +537,9 @@
 
         <!-- Extra-Foto -->
         <article class="tile tile-photo-extra">
-          <h2>Lieblingsbild</h2>
+          <h2>Lieblingsbilder</h2>
           <div class="photo-frame-high">
-            <img src="us.png" alt="wir" />
+            <img src="milan.png" alt="wir" />
           </div>
           <div class="photo-caption">
             Eines meiner Lieblingsbilder von uns.
@@ -556,6 +556,16 @@
           </div>
           <div class="photo-caption">
             Unsere Playlist - Wenn du Songs hast die du gerne hörst während du in Südafrika bist, tu sie gerne da rein :)
+          </div>
+        </article>
+
+        <article class="tile tile-photo-extra">
+          <h2>Lieblingsbilder</h2>
+          <div class="photo-frame">
+              <img src="blick.png" alt="Como"/>              
+          </div>
+          <div class="photo-caption">
+            Eines meiner Lieblingsbilder von dir.
           </div>
         </article>
         
