--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
         </article>
         
         <!-- Extra-Foto -->
-        <article class="tile tile-photo-extra">
+        <article class="tile tile-photo-low">
           <h2>Playlist</h2>
           <div class="photo-frame">
             <a target="_blank" rel="noopener noreferrer" href="https://open.spotify.com/playlist/2WbAxP2DIfQna06eobEzkA?si=2fd41b55a796491f">
@@ -559,9 +559,9 @@
           </div>
         </article>
 
-        <article class="tile tile-photo-extra">
+        <article class="tile tile-photo-right">
           <h2>Lieblingsbilder</h2>
-          <div class="photo-frame">
+          <div class="photo-frame-high">
               <img src="blick.png" alt="Como"/>              
           </div>
           <div class="photo-caption">
