--- a/index.html
+++ b/index.html
@@ -96,46 +96,51 @@
       }
     }
 
-    /* Grid */
 
+  .grid {
+    display: grid;
+    grid-template-columns: 1.6fr 1.2fr 1.2fr;
+    grid-auto-rows: minmax(170px, auto);
+    gap: 18px;
+  
+    grid-template-areas:
+      "hero        hero        photo-main"
+      "countdown   photo-side  todo"
+      "photo-extra photo-side  playlist"
+      "photo-right photo-side  photo-right"
+      "letter      letter      letter";
+  }
+  
+  @media (max-width: 900px) {
     .grid {
-      display: grid;
-      grid-template-columns: 1.6fr 1.2fr 1.2fr;
-      grid-auto-rows: minmax(170px, auto);
-      gap: 18px;
+      grid-template-columns: 1fr 1fr;
       grid-template-areas:
-        "hero hero photo-main"
-        "countdown photo-side todo"
-        "letter photo-side photo-extra";
+        "hero       hero"
+        "photo-main photo-main"
+        "countdown  todo"
+        "photo-side photo-extra"
+        "photo-right playlist"
+        "letter     letter";
     }
-
-    @media (max-width: 900px) {
-      .grid {
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas:
-          "hero hero"
-          "photo-main photo-main"
-          "countdown todo"
-          "photo-side photo-extra"
-          "letter letter";
-      }
+  }
+  
+  @media (max-width: 640px) {
+    .grid {
+      grid-template-columns: 1fr;
+      grid-auto-rows: auto;
+      gap: 14px;
+      grid-template-areas:
+        "hero"
+        "countdown"
+        "photo-main"
+        "todo"
+        "photo-side"
+        "photo-extra"
+        "playlist"
+        "photo-right"
+        "letter";
     }
-
-    @media (max-width: 640px) {
-      .grid {
-        grid-template-columns: 1fr;
-        grid-auto-rows: auto;
-        gap: 14px;
-        grid-template-areas:
-          "hero"
-          "countdown"
-          "photo-main"
-          "todo"
-          "photo-side"
-          "photo-extra"
-          "letter";
-      }
-    }
+  }
 
     .tile {
       border-radius: 20px;
@@ -230,6 +235,18 @@
 
     .tile-photo-extra {
       grid-area: photo-extra;
+      background: var(--tile-pink-primary);
+      padding: 16px;
+    }
+
+    .tile-photo-low {
+      grid-area: playlist;
+      background: #fffafc;
+      padding: 16px;
+    }
+    
+    .tile-photo-right {
+      grid-area: photo-right;
       background: var(--tile-pink-primary);
       padding: 16px;
     }
