--- a/index.html
+++ b/index.html
@@ -97,50 +97,51 @@
     }
 
 
+ .grid {
+  display: grid;
+  grid-template-columns: 1.6fr 1.2fr 1.2fr;
+  grid-auto-rows: minmax(170px, auto);
+  gap: 18px;
+
+  grid-template-areas:
+    "hero        hero        photo-main"
+    "countdown   photo-side  todo"
+    "photo-extra photo-side  playlist"
+    "photo-right photo-side  playlist"
+    "letter      letter      letter";
+}
+
+@media (max-width: 900px) {
   .grid {
-    display: grid;
-    grid-template-columns: 1.6fr 1.2fr 1.2fr;
-    grid-auto-rows: minmax(170px, auto);
-    gap: 18px;
-  
+    grid-template-columns: 1fr 1fr;
     grid-template-areas:
-      "hero        hero        photo-main"
-      "countdown   photo-side  todo"
-      "photo-extra photo-side  playlist"
-      "photo-right photo-side  photo-right"
-      "letter      letter      letter";
+      "hero       hero"
+      "photo-main photo-main"
+      "countdown  todo"
+      "photo-side photo-extra"
+      "photo-right playlist"
+      "letter     letter";
   }
-  
-  @media (max-width: 900px) {
-    .grid {
-      grid-template-columns: 1fr 1fr;
-      grid-template-areas:
-        "hero       hero"
-        "photo-main photo-main"
-        "countdown  todo"
-        "photo-side photo-extra"
-        "photo-right playlist"
-        "letter     letter";
-    }
+}
+
+@media (max-width: 640px) {
+  .grid {
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
+    gap: 14px;
+    grid-template-areas:
+      "hero"
+      "countdown"
+      "photo-main"
+      "todo"
+      "photo-side"
+      "photo-extra"
+      "playlist"
+      "photo-right"
+      "letter";
   }
-  
-  @media (max-width: 640px) {
-    .grid {
-      grid-template-columns: 1fr;
-      grid-auto-rows: auto;
-      gap: 14px;
-      grid-template-areas:
-        "hero"
-        "countdown"
-        "photo-main"
-        "todo"
-        "photo-side"
-        "photo-extra"
-        "playlist"
-        "photo-right"
-        "letter";
-    }
-  }
+}
+
 
     .tile {
       border-radius: 20px;
