--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
               <img src="blick.png" alt="Como"/>              
           </div>
           <div class="photo-caption">
-            Eines meiner Lieblingsbilder von dir.
+            Und eins meiner Lieblingsbilder von dir.
           </div>
         </article>
         
