--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
           <h2>Playlist</h2>
           <div class="photo-frame">
             <a target="_blank" rel="noopener noreferrer" href="https://open.spotify.com/playlist/2WbAxP2DIfQna06eobEzkA?si=2fd41b55a796491f">
-              <img src="playlist.png" alt="playlist"/>              
+              <img src="spotplay.png" alt="playlist"/>              
             </a>
           </div>
           <div class="photo-caption">
