Revise photo caption in index.html
Updated the photo caption text for clarity and added a request for a new name.

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
             </a>
           </div>
           <div class="photo-caption">
-            Unsere Playlist - Wenn du Songs hast die du gerne hörst während du in Südafrika bist, tu sie gerne da rein :)
+            Unsere Playlist - Wenn wir Songs haben die wir hören während wir uns nicht sehen, können wir sie da rein tun :) Und wir brauchen noch einen anderen Namen dafür!
           </div>
         </article>
 
